--- a/index.html
+++ b/index.html
@@ -7,37 +7,37 @@
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script/main.js"></script>
+    <link href="style/main.css" rel="stylesheet">
 </head>
 
-<body style="background:black;color:white;font-size:2em">
-    <h1>Black is Down</h1>
+<body>
+    <div id="wrapper">
+        <h1>Black is Down</h1>
 
-    <h2>Current game</h2>
+        <h2>Current game</h2>
 
-    <div id="clue">
-        Clue:
+        <div id="clue"></div>
+
+        <div id="active-time">
+            Active for:
+        </div>
+
+        <div id="Answer">
+            Answer:
+            <input id="answer" />
+        </div>
+
+        <h2>Previous games</h2>
+        <table id="previous-games">
+            <thead>
+                <th>Clue</th>
+                <th>Answer</th>
+                <th>Solved by</th>
+                <th>Active time</th>
+            </thead>
+            <tbody></tbody>
+        </table>
     </div>
-
-    <div id="active-time">
-        Active time:
-    </div>
-
-    <div id="Answer">
-        Answer:
-        <input id="answer" />
-    </div>
-
-    <h2>Previous games</h2>
-    <table id="previous-games">
-        <thead>
-            <th>Clue</th>
-            <th>Answer</th>
-            <th>Solved by</th>
-            <th>Active time</th>
-        </thead>
-		<tbody></tbody>
-    </table>
-
 </body>
 
 </html>
