--- a/index.html
+++ b/index.html
@@ -18,25 +18,26 @@
 
         <div id="clue"></div>
 
+        <div id="answer">
+            <input id="answer-input" placeholder="Answer" />
+        </div>
+
         <div id="active-time">
-            Active for:
+            Active for
         </div>
 
-        <div id="Answer">
-            Answer:
-            <input id="answer" />
+        <div id="previous-games">
+            <h2>Previous games</h2>
+            <table border="true">
+                <thead>
+                    <th>Clue</th>
+                    <th>Answer</th>
+                    <th>Solved by</th>
+                    <th>Active time</th>
+                </thead>
+                <tbody></tbody>
+            </table>
         </div>
-
-        <h2>Previous games</h2>
-        <table id="previous-games">
-            <thead>
-                <th>Clue</th>
-                <th>Answer</th>
-                <th>Solved by</th>
-                <th>Active time</th>
-            </thead>
-            <tbody></tbody>
-        </table>
     </div>
 </body>
 
