Basic Node set up.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Black is Down</title>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="script/main.js"></script>
-    <link href="style/main.css" rel="stylesheet">
+    <script src="bin/bundle.js"></script>
+    <link href="index.css" rel="stylesheet">
 </head>
 
 <body>
